<resources>
    <string name="app_name">DoubanMovie</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">主页</string>
    <string name="deeplink">DeepLink</string>
    <string name="load_more">loading more ...</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">MainActivity</string>

    <string name="rank">排行榜</string>
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="my">我的</string>
    <string name="message">消息</string>
    <string name="content">contentcontentcontent\r\ncontentcontentcontentcontent\r\ncontentcontentcontentcontent</string>
    <string name="setting">设置</string>
    <string name="dark_mode">暗色模式</string>
    <string name="dark_mode_yes">开启</string>
    <string name="dark_mode_no">关闭</string>
    <string name="dark_mode_default">跟随系统</string>


    <string name="rank_week_title">每周五更新 10部</string>
    <string name="rank_week_hint">一周口碑电影</string>
    <string name="rank_top_title">每周五更新 10部</string>
    <string name="rank_top_hint">一周口碑电影</string>
    <string name="rank_new_title">每周五更新 10部</string>
    <string name="rank_new_hint">一周口碑电影</string>
    <string name="rank_us_title">每周五更新 10部</string>
    <string name="rank_us_hint">一周口碑电影</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>


</resources>
