<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.edgar.movie.ui.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_rank"
        android:name="com.edgar.movie.ui.rank.RankFragment"
        android:label="@string/rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/navigation_cinema"
        android:name="com.edgar.movie.ui.cinema.CinemaFragment"
        android:label="@string/cinema"
        tools:layout="@layout/fragment_cinema" />
    <fragment
        android:id="@+id/navigation_my"
        android:name="com.edgar.movie.ui.my.MyFragment"
        android:label="@string/my"
        tools:layout="@layout/fragment_my" />
</navigation>