<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/dark_mode"
                app:navigationIcon="@drawable/ic__arrow_back"
                app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RadioGroup
                android:id="@+id/rg_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_dark_mode_default"
                    style="@style/radio_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode_default"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rb_dark_mode_yes"
                    style="@style/radio_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode_yes" />

                <RadioButton
                    android:id="@+id/rb_dark_mode_no"
                    style="@style/radio_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode_no" />
            </RadioGroup>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
