<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/favicon" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_user_label"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="用户名"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#0000FF"
        android:textStyle="normal"
        android:singleLine="true"
        android:ellipsize="start"
    app:layout_constraintTop_toTopOf="@id/et_username"
    tools:ignore="MissingConstraints"
    app:layout_constraintBottom_toBottomOf="@id/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="密码"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        app:layout_constraintTop_toTopOf="@id/et_password"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/s_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="记住密码"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/sb_height"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s_save_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="身高"
        app:layout_constraintBottom_toBottomOf="@id/sb_height"
        app:layout_constraintTop_toTopOf="@id/sb_height"
        tools:ignore="MissingConstraints" />


    <CheckBox
        android:id="@+id/cb_first_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="是否首次使用"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_height" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_first_use">

        <RadioButton
            android:id="@+id/rb_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女" />

        <RadioButton
            android:id="@+id/rb_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="男" />
    </RadioGroup>

    <CalendarView
        android:id="@+id/cv_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:firstDayOfWeek="0"
        android:shownWeekCount="5"
        android:selectedWeekBackgroundColor="@color/colorPrimaryDark"
        android:focusedMonthDateColor="@color/colorAccent"
        android:weekSeparatorLineColor="@color/colorPrimary"
        android:unfocusedMonthDateColor="#F9F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <Button
        android:id="@+id/btn_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>