<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MergeRootFrame">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="@string/rank"
            app:titleMargin="0dp">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/plant_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <com.edgar.movie.widget.GradientCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:colorEnd="@color/rank1_color_end"
                app:colorStart="@color/rank1_color_start"
                android:id="@+id/view_rank_week">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_hint"
                        android:text="@string/rank_week_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_title"
                        android:text="@string/rank_week_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.edgar.movie.widget.GradientCardView>

            <com.edgar.movie.widget.GradientCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:colorEnd="@color/rank2_color_end"
                app:colorStart="@color/rank2_color_start"
                android:id="@+id/view_rank_top">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_hint"
                        android:text="@string/rank_top_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_title"
                        android:text="@string/rank_top_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.edgar.movie.widget.GradientCardView>
            <com.edgar.movie.widget.GradientCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:colorEnd="@color/rank3_color_end"
                app:colorStart="@color/rank3_color_start"
                android:id="@+id/view_rank_new">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_hint"
                        android:text="@string/rank_new_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_title"
                        android:text="@string/rank_new_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.edgar.movie.widget.GradientCardView>
            <com.edgar.movie.widget.GradientCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:colorEnd="@color/rank4_color_end"
                app:colorStart="@color/rank4_color_start"
                android:id="@+id/view_rank_us">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_hint"
                        android:text="@string/rank_us_hint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/rank_text_title"
                        android:text="@string/rank_us_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.edgar.movie.widget.GradientCardView>
            

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".ui.movie.MovieFragment"-->
    <!--    android:fitsSystemWindows="true">-->

    <!--    <com.google.android.material.appbar.MaterialToolbar-->
    <!--        android:id="@+id/rank_app_bar"-->
    <!--        android:background="?attr/colorPrimary"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:title="排行榜" />-->

    <!--    <TextView-->
    <!--        android:text="rank"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/rank_app_bar">-->
    <!--        <com.edgar.movie.widget.GradientCardView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="120dp"-->
    <!--            app:colorStart="@color/rank_color_start"-->
    <!--            app:colorEnd="@color/rank_color_end"-->
    <!--            android:layout_marginTop="20dp">-->
    <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent">-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="20dp"-->
    <!--                    app:layout_constraintTop_toTopOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginBottom="20dp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


    <!--        </com.edgar.movie.widget.GradientCardView>-->
    <!--        <com.edgar.movie.widget.GradientCardView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="120dp"-->
    <!--            app:colorStart="@color/rank_color_start"-->
    <!--            app:colorEnd="@color/rank_color_end"-->
    <!--            android:layout_marginTop="20dp">-->
    <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent">-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="20dp"-->
    <!--                    app:layout_constraintTop_toTopOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginBottom="20dp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


    <!--        </com.edgar.movie.widget.GradientCardView>-->
    <!--        <com.edgar.movie.widget.GradientCardView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="120dp"-->
    <!--            app:colorStart="@color/rank_color_start"-->
    <!--            app:colorEnd="@color/rank_color_end"-->
    <!--            android:layout_marginTop="20dp">-->
    <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent">-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="20dp"-->
    <!--                    app:layout_constraintTop_toTopOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginBottom="20dp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


    <!--        </com.edgar.movie.widget.GradientCardView>-->
    <!--        <com.edgar.movie.widget.GradientCardView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="120dp"-->
    <!--            app:colorStart="@color/rank_color_start"-->
    <!--            app:colorEnd="@color/rank_color_end"-->
    <!--            android:layout_marginTop="20dp">-->
    <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent">-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginTop="20dp"-->
    <!--                    app:layout_constraintTop_toTopOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--                <TextView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="@string/cinema"-->
    <!--                    android:layout_marginStart="20dp"-->
    <!--                    android:layout_marginBottom="20dp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent"/>-->
    <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


    <!--        </com.edgar.movie.widget.GradientCardView>-->

    <!--    </LinearLayout>-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->